Add GitHub Actions. Add PR template. Fix tests. Refactor.